Fix multiple tabs scrollbar track display bug

--- a/src/assets/styles/Main.sass
+++ b/src/assets/styles/Main.sass
@@ -20,7 +20,7 @@ a
   background: #00000040
 
 ::-webkit-scrollbar-track
-  background: #0000001a
+  background: $colorGrey !important
 
 @media only screen and (min-width: 768px)
   .main-container
